--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,1 +1,11 @@
-$wtf: #2D2241;
+
+:root {
+    --color-background: #2B1F12;
+    --color-text: #ffffff;
+    --font: 'Lexend Tera', sans-serif;
+    --dark-button-color:#fc8d83;
+    --dark-switch: #c62d1f;
+    --font: 'Lexend Tera', sans-serif;
+    --light-button-color: #c62d1f;
+    --light-switch: #fc8d83;
+}
